gitops/apps/evaluation/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: evaluation
  labels:
    application: evaluation
