gitops/apps/evaluation/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: evaluation
  labels:
    app: evaluation-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      containers:
        - name: evaluation-service
          image: 742792279914.dkr.ecr.us-east-1.amazonaws.com/togglemaster-evaluation:v1.0.0-fe204532b4d8d999b7ce82c7490226b2a5efaf2b
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8004
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 15
            periodSeconds: 20
